fix: align home page image to top
Change featured image alignment from center to start for better visual hierarchy

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -61,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: auto;
   justify-self: center;
-  align-self: center;
+  align-self: start;
 }
 
 
